HEO DO KYUNG : PORTFOLIO

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 			<nav id="web">
 
 				<ul id="gnb">
-					<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md">Makeup<br>Guide</a></li>
+					<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md" target="_blank">>Makeup<br>Guide</a></li>
 				</ul>
 			</nav>
 			<nav id="mobile">
 				<a href="#" class="btn_menu"><span></span></a>
 			</nav>
 			<ul class="m_menu">
-				<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md">MarkUpGuide</a></li>
+				<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md" target="_blank">MarkUpGuide</a></li>
 			</ul>
 		</header>
 		<span class="progressbar" id="scrollBar"></span>
