--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<nav id="web">
 
 				<ul id="gnb">
-					<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md" target="_blank">>Makeup<br>Guide</a></li>
+					<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md" target="_blank">Makeup<br>Guide</a></li>
 				</ul>
 			</nav>
 			<nav id="mobile">
