--- a/index.html
+++ b/index.html
@@ -37,21 +37,14 @@
 
 
 	<section class="container">
-		<article class="main_visual">
+		<article class="main__visual">
 			<div class="title_wrap">
-				<p class="tit">
-					UI & UX<br>
-					<span>Front End</span> Developer
-				</p>
+				<p class="tit">UI & UX<br> <span>Front End</span> Developer</p>
 				<p class="sub_tit">웹표준 및 웹 접근성 지식으로 사용자에게 보다 좋은 UI를 제공하려고 노력합니다.<br> 개발자 직무 경험을 바탕으로 개발에 용이한 간결한 코드로 작업을 진행하며<br> 디자인팀과 보다 좋은 GUI를 구현하기 위해 소통하며 협업합니다.</p>
 			</div>
 			<img src="img/main/bg_main_visual.jpg" alt="">
 
-			<div class="movement_wrap">
-				<div>
-					<em>scroll</em>
-				</div>
-			</div>
+			<div class="movement__wrap"><div><em>scroll</em></div></div>
 		</article>
 
 
@@ -63,7 +56,7 @@
 					<section class="select">
 						<select id="sort" title="Sort 기능" v-model="sort" @change="sortChange">
 							<option value="all">ALL</option>
-							<option value="y2018">2018</option>
+							<option value="y2018">현재 ~ 2018</option>
 							<option value="y2017">2017</option>
 							<option value="y2016">2016</option>
 							<option value="y2015">2015</option>
@@ -80,9 +73,9 @@
 				</div>
 			</article>
 
-			<article class="port_list_wrap">
+			<article class="port__list--wrap">
 				<h2 class="title">Works</h2>
-				<div class="port_list">
+				<div class="port__list">
 					<ul v-if="!query">
 						<portfolio-items v-for="(items, index) in portfolio" :key="index" :items="items" :class="items.gubun"></portfolio-items>
 					</ul>
@@ -93,13 +86,14 @@
 					</div> -->
 				</div>
 			</article>
-			<!-- //port_list_wrap -->
+			<!-- //port__list--wrap -->
 
 		</article>
 		<!-- // wapper -->
 
 		<article class="work_skill">
 			<h2 class="title">skill</h2>
+			<lottie-player src="https://assets9.lottiefiles.com/packages/lf20_54iisen9.json"  background="transparent"  speed="1"  style="width: 100%; height: 300px;"  loop  autoplay></lottie-player>
 			<ul class="skill_list">
 				<li>
 					<div class="front">
@@ -250,120 +244,140 @@
 		</article>
 
 		<article class="work_experience">
-			<h2 class="title">Works experience</h2>
-			<div class="info_wrap">
-				<dl>
-					<dt>(주)핀크(Finnq)</dt>
-					<dd>
-						<ul>
-							<li>기간 : 2018.08. ~ 재직중</li>
-							<li>소속 / 직급 : Platform개발 2팀 / 매니저</li>
-							<li>담당업무 : Finnq App/Web에서 제공하는 다양한 서비스 운영 및 신규 서비스 개발, 배포를 담당하고 있습니다.<br /> Sketch와 Zepline을 통해 기획자 및 디자이너와 협업을 진행하고 있으며 Jira, Wiki Confluence, Slack을 사용하여 이슈처리 대응 및 히스토리 관리를 합니다.</li>
-						</ul>
-					</dd>
-				</dl>
-				<dl>
-					<dt>넷트루컨설팅그룹</dt>
-					<dd>
-						<ul>
-							<li>기간 : 2016.01. ~ 2018.07.</li>
-							<li>소속 / 직급 : 채널사업부 / 책임</li>
-							<li>담당업무 : 웹 퍼블리싱 PL, 웹 접근성 검수, 웹 표준, 웹/모바일 퍼블리싱, UI 개발</li>
-						</ul>
-					</dd>
-				</dl>
-				<dl>
-					<dt>애드캡슐소프트</dt>
-					<dd>
-						<ul>
-							<li>기간 : 2014.02. - 2015.12.</li>
-							<li>소속 / 직급 : 퍼블리싱 그룹 / 주임</li>
-							<li>담당업무 : 웹 접근성 검수, 웹 표준, 웹/모바일 퍼블리싱, UI 개발</li>
-						</ul>
-					</dd>
-				</dl>
-				<dl>
-					<dt>토피아정보기술</dt>
-					<dd>
-						<ul>
-							<li>기간 : 2012.08. - 2013.09.</li>
-							<li>소속 / 직급 : 웹 개발팀 / 대리</li>
-							<li>담당업무 : Java, Jsp, Oracel, SQL, iBatis등</li>
-						</ul>
-					</dd>
-				</dl>
-				<dl>
-					<dt>주식회사에이스통상</dt>
-					<dd>
-						<ul>
-							<li>기간 : 2010.04. - 2012.02.</li>
-							<li>소속 / 직급 : 전산부 / 사원</li>
-							<li>담당업무 : Asp, Ramada 웹 사이트 운영</li>
-						</ul>
-					</dd>
-				</dl>
+			<h2 class="title">Works</h2>
+			<div>
+				<lottie-player src="https://assets9.lottiefiles.com/datafiles/MUp3wlMDGtoK5FK/data.json"  background="transparent"  speed="1"  style="width: 100%; height: 300px;"  loop  autoplay></lottie-player>
+			</div>
+			<div class="step--list__guide info__wrap">
+				<ul>
+					<li>
+						<dl>
+							<dt>(주)핀크(Finnq)</dt>
+							<dd>
+								<ul>
+									<li>기간 : 2018.08. ~ 재직중</li>
+									<li>소속 / 직급 : Platform개발 2팀 / 매니저</li>
+									<li>담당업무 : Finnq App/Web에서 제공하는 다양한 서비스 운영 및 신규 서비스 개발, 배포를 담당하고 있습니다.<br /> Sketch와 Zepline을 통해 기획자 및 디자이너와 협업을 진행하고 있으며 Jira, Wiki Confluence, Slack을 사용하여 이슈처리 대응 및 히스토리 관리를 합니다.</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>넷트루컨설팅그룹</dt>
+							<dd>
+								<ul>
+									<li>기간 : 2016.01. ~ 2018.07.</li>
+									<li>소속 / 직급 : 채널사업부 / 책임</li>
+									<li>담당업무 : 웹 퍼블리싱 PL, 웹 접근성 검수, 웹 표준, 웹/모바일 퍼블리싱, UI 개발</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>애드캡슐소프트</dt>
+							<dd>
+								<ul>
+									<li>기간 : 2014.02. - 2015.12.</li>
+									<li>소속 / 직급 : 퍼블리싱 그룹 / 주임</li>
+									<li>담당업무 : 웹 접근성 검수, 웹 표준, 웹/모바일 퍼블리싱, UI 개발</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>토피아정보기술</dt>
+							<dd>
+								<ul>
+									<li>기간 : 2012.08. - 2013.09.</li>
+									<li>소속 / 직급 : 웹 개발팀 / 대리</li>
+									<li>담당업무 : Java, Jsp, Oracel, SQL, iBatis등</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>주식회사에이스통상</dt>
+							<dd>
+								<ul>
+									<li>기간 : 2010.04. - 2012.02.</li>
+									<li>소속 / 직급 : 전산부 / 사원</li>
+									<li>담당업무 : Asp, Ramada 웹 사이트 운영</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+				</ul>
 			</div>
 		</article>
 
-		<article class="info_about">
+		<article class="info__about">
 			<h2 class="title">about</h2>
-			<div class="info_wrap">
-				<div>
-					<h3 class="sub_title">license</h3>
-					<dl>
-						<dt>정보처리기사</dt>
-						<dd>
-							<ul>
-								<li>취득일 : 2015.05.08.</li>
-								<li>발행처 : 한국산업인력공단</li>
-							</ul>
-						</dd>
-					</dl>
-				</div>
-
-				<div>
-					<h3 class="sub_title">TRAINING &amp; ETC</h3>
-					<dl>
-						<dt>정보접근성 지킴이 활동</dt>
-						<dd>
-							<ul>
-								<li>기관 : 미래창조과학부</li>
-								<li>기간 : 2016.04.04. - 2016.12.31.</li>
-								<li>활동내용 : 웹 접근성 준수를 위하여 미래창조과학부에서 주관하는 웹 정보접근성지킴이 활동으로<br> 표본사이트 1000~2000의 사이트를 선별하여 웹 접근성 준수여부를 준수하였는지 확인 후<br> 보고서 작성 및 웹 접근성을 준수하도록 권고하는 활동을 하였습니다.</li>
-							</ul>
-						</dd>
-					</dl>
-					<dl>
-						<dt>하이브리드 인터페이스 기술구현 고도화</dt>
-						<dd>
-							<ul>
-								<li>기관 : 대한상공회의소</li>
-								<li>기간 : 2015.10.17. - 2015.11.01.</li>
-								<li>교육내용 : AngularJS를 활용하여 폰 앱 구현</li>
-							</ul>
-						</dd>
-					</dl>
-					<dl>
-						<dt>웹표준 전문가 양성과정</dt>
-						<dd>
-							<ul>
-								<li>기관 : 한국직업전문학교</li>
-								<li>기간 : 2013.10.16. - 2013.12.10.</li>
-								<li>교육내용 : HTML,CSS,jQuery,Javascript,웹접근성,크로스 브라우징에 대한 개념교육</li>
-							</ul>
-						</dd>
-					</dl>
-					<dl>
-						<dt>멀티플렛폼 스마트 웹 & 앱 개발자 과정</dt>
-						<dd>
-							<ul>
-								<li>기관 : 중앙정보처리학원</li>
-								<li>기간 : 2012.03.15. - 2012.08.06.</li>
-								<li>교육내용 : Java,Servlet,JSP,Oracel,SQL,Struts,Spring등을 기반으로 웹 	사이트의 전반적인 구조및 데이터베이스 기능 구현</li>
-							</ul>
-						</dd>
-					</dl>
-				</div>
+			<div class="step--list__guide info__wrap">
+				<ul>
+					<li>
+						<dl>
+							<dt><strong>license</strong> : 정보처리기사</dt>
+							<dd>
+								<ul>
+									<li>취득일 : 2015.05.08.</li>
+									<li>발행처 : 한국산업인력공단</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt><strong>TRAINING &amp; ETC</strong>정보접근성 지킴이 활동</dt>
+							<dd>
+								<ul>
+									<li>기관 : 미래창조과학부</li>
+									<li>기간 : 2016.04.04. - 2016.12.31.</li>
+									<li>활동내용 : 웹 접근성 준수를 위하여 미래창조과학부에서 주관하는 웹 정보접근성지킴이 활동으로<br> 표본사이트 1000~2000의 사이트를 선별하여 웹 접근성 준수여부를 준수하였는지 확인 후<br> 보고서 작성 및 웹 접근성을 준수하도록 권고하는 활동을 하였습니다.</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>하이브리드 인터페이스 기술구현 고도화</dt>
+							<dd>
+								<ul>
+									<li>기관 : 대한상공회의소</li>
+									<li>기간 : 2015.10.17. - 2015.11.01.</li>
+									<li>교육내용 : AngularJS를 활용하여 폰 앱 구현</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>웹표준 전문가 양성과정</dt>
+							<dd>
+								<ul>
+									<li>기관 : 한국직업전문학교</li>
+									<li>기간 : 2013.10.16. - 2013.12.10.</li>
+									<li>교육내용 : HTML,CSS,jQuery,Javascript,웹접근성,크로스 브라우징에 대한 개념교육</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+					<li>
+						<dl>
+							<dt>멀티플렛폼 스마트 웹 & 앱 개발자 과정</dt>
+							<dd>
+								<ul>
+									<li>기관 : 중앙정보처리학원</li>
+									<li>기간 : 2012.03.15. - 2012.08.06.</li>
+									<li>교육내용 : Java,Servlet,JSP,Oracel,SQL,Struts,Spring등을 기반으로 웹 	사이트의 전반적인 구조및 데이터베이스 기능 구현</li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
+				</ul>
 			</div>
 		</article>
 
@@ -385,6 +399,7 @@
 </body>
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/vue-2.5.17.min.js"></script>
+<script type="text/javascript" src="js/lottie-player.js"></script>
 <script type="text/javascript" src="js/ui.js?date190522_1113"></script>
 <script type="text/javascript" src="js/mainVue.js?date190522_1113"></script>
 <script type="text/javascript">
@@ -403,13 +418,13 @@ $(function(){
 
 	// 포트폴이오 메뉴 리스트 자세히보기 EVENT
 	function portMenuListEvt(){
-		$(document).on('mouseenter focusin', '.port_list li', function() {
+		$(document).on('mouseenter focusin', '.port__list li', function() {
 			$(this).find('.over').css({ opacity : .8 }).stop().fadeIn(250);
 			$(this).find('.more').stop().animate({ bottom : '50px'}, 350, easing, function() {});
 		});
 
-		$(document).on('mouseleave focusout', '.port_list li', function() {
-			$('.port_list li .over').fadeOut(250);
+		$(document).on('mouseleave focusout', '.port__list li', function() {
+			$('.port__list li .over').fadeOut(250);
 			$(this).find('.more').stop().animate({ bottom : '-300%'}, 350, easing, function() {});
 		});
 	}
@@ -421,21 +436,19 @@ $(function(){
 			$('.mask').remove();
 	});
 
-
-
 	// 화면 스크롤 시 페이지 목록 호출 이벤트
 	function menuScrollEvt(){
 		var _num = 600;
-		var _menu1 = $('.port_list_wrap').offset().top - 500,
+		var _menu1 = $('.port__list--wrap').offset().top - 500,
 			_menu2 = $('.skill_list').offset().top - 500,
-			_menu3 = $('.work_experience .info_wrap').offset().top - _num,
-			_menu4 = $('.info_about .info_wrap').offset().top - _num,
+			_menu3 = $('.work_experience .info__wrap').offset().top - _num,
+			_menu4 = $('.info__about .info__wrap').offset().top - _num,
 			_scrollTop = $(this).scrollTop();
 
-		if (_scrollTop >= _menu1) {$('.port_list').addClass('on');}
+		if (_scrollTop >= _menu1) {$('.port__list').addClass('on');}
 		if (_scrollTop >= _menu2) {$('.skill_list').addClass('on');}
-		if (_scrollTop >= _menu3) {$('.work_experience .info_wrap').addClass('on');}
-		if (_scrollTop >= _menu4) {$('.info_about .info_wrap').addClass('on');}
+		if (_scrollTop >= _menu3) {$('.work_experience .info__wrap').addClass('on');}
+		if (_scrollTop >= _menu4) {$('.info__about .info__wrap').addClass('on');}
 
 		if (_scrollTop > 0 ) {
 			$('#header_area').addClass('on');
