--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
 
 		<article class="work_skill">
 			<h2 class="title">skill</h2>
-			<lottie-player src="https://assets9.lottiefiles.com/packages/lf20_54iisen9.json"  background="transparent"  speed="1"  style="width: 100%; height: 300px;"  loop  autoplay></lottie-player>
+			<lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 100%; height: 400px;"  loop  autoplay></lottie-player>
+
 			<ul class="skill_list">
 				<li>
 					<div class="front">
@@ -300,7 +301,7 @@
 					</li>
 					<li>
 						<dl>
-							<dt>주식회사에이스통상</dt>
+							<dt>(주)에이스통상</dt>
 							<dd>
 								<ul>
 									<li>기간 : 2010.04. - 2012.02.</li>
@@ -316,11 +317,13 @@
 
 		<article class="info__about">
 			<h2 class="title">about</h2>
+			<!-- <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_54iisen9.json"  background="transparent"  speed="1"  style="width: 100%; height: 300px;"  loop  autoplay></lottie-player> -->
+			<lottie-player src="https://assets4.lottiefiles.com/private_files/lf30_kj1b8w1w.json"  background="transparent"  speed="1"  style="width: 100%; height:350px;"  loop  autoplay></lottie-player>
 			<div class="step--list__guide info__wrap">
 				<ul>
 					<li>
 						<dl>
-							<dt><strong>license</strong> : 정보처리기사</dt>
+							<dt><strong>lICENSE : </strong>정보처리기사</dt>
 							<dd>
 								<ul>
 									<li>취득일 : 2015.05.08.</li>
@@ -331,7 +334,7 @@
 					</li>
 					<li>
 						<dl>
-							<dt><strong>TRAINING &amp; ETC</strong>정보접근성 지킴이 활동</dt>
+							<dt><strong>EXPERIENCE : </strong>정보접근성 지킴이 활동</dt>
 							<dd>
 								<ul>
 									<li>기관 : 미래창조과학부</li>
@@ -343,7 +346,7 @@
 					</li>
 					<li>
 						<dl>
-							<dt>하이브리드 인터페이스 기술구현 고도화</dt>
+							<dt><strong>TRAINING : </strong>하이브리드 인터페이스 기술구현 고도화</dt>
 							<dd>
 								<ul>
 									<li>기관 : 대한상공회의소</li>
@@ -355,7 +358,7 @@
 					</li>
 					<li>
 						<dl>
-							<dt>웹표준 전문가 양성과정</dt>
+							<dt><strong>TRAINING : </strong>웹표준 전문가 양성과정</dt>
 							<dd>
 								<ul>
 									<li>기관 : 한국직업전문학교</li>
@@ -367,7 +370,7 @@
 					</li>
 					<li>
 						<dl>
-							<dt>멀티플렛폼 스마트 웹 & 앱 개발자 과정</dt>
+							<dt><strong>TRAINING : </strong>멀티플렛폼 스마트 웹 & 앱 개발자 과정</dt>
 							<dd>
 								<ul>
 									<li>기관 : 중앙정보처리학원</li>
