--- a/detail/web/w_kebhana_open.html
+++ b/detail/web/w_kebhana_open.html
@@ -48,6 +48,7 @@
                                 <li>이전 사이트와 비교하여 UI/UX 사용성 개선</li>
                                 <li>익스플로러(ie9~) 및 모던 브라우저 크로스브라우징</li>
                                 <li>Semantic Markup 퍼블리싱</li>
+                                <li>페럴렉스 메뉴 구조화</li>
                             </ul>
                         </li>
                         <li><em>고객사</em> : KEB 하나은행</li>
