--- a/index.html
+++ b/index.html
@@ -380,6 +380,16 @@
 							</dd>
 						</dl>
 					</li>
+					<li>
+						<dl>
+							<dt><strong>CONTACT</strong></dt>
+							<dd>
+								<ul>
+									<li><a href="mailto:limewhale@daum.net">limewhale@daum.net</a></li>
+								</ul>
+							</dd>
+						</dl>
+					</li>
 				</ul>
 			</div>
 		</article>
@@ -389,7 +399,7 @@
 	<footer>
 		<div class="footer_area">
 			<p class="footer_logo"><img src="img/footer_whale.png" alt="whale tail" /></p>
-			<div class="copyright1">
+			<div class="copyright">
 				<p>Copyright © limewhale.com All rights reserved.</p>
 				<address><a href="mailto:limewhale@daum.net">limewhale@daum.net</a></address>
 			</div>
