--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 				<li><a href="https://github.com/heodokyung/markup-guide/blob/master/README.md" target="_blank">MarkUpGuide</a></li>
 			</ul>
 		</header>
-		<span class="progressbar" id="scrollBar"></span>
+		<div class="progressbar" id="scrollBar">
+			<span class="test"></span>
+		</div>
 	</section>
 
 
@@ -306,7 +308,7 @@
 								<ul>
 									<li>기간 : 2010.04. - 2012.02.</li>
 									<li>소속 / 직급 : 전산부 / 사원</li>
-									<li>담당업무 : Asp, Ramada 웹 사이트 운영</li>
+									<li>담당업무 : Asp, RAMADA HOTEL 웹 사이트 운영</li>
 								</ul>
 							</dd>
 						</dl>
@@ -451,7 +453,7 @@ $(function(){
 
 	// 화면 스크롤 시 페이지 목록 호출 이벤트
 	function menuScrollEvt(){
-		var _num = 600;
+		var _num = 700;
 		var _menu1 = $('.port__list--wrap').offset().top - 500,
 			_menu2 = $('.skill_list').offset().top - 500,
 			_menu3 = $('.work_experience .info__wrap').offset().top - _num,
