허도경 포트폴리오 (Portfolio)

--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -53,7 +53,7 @@
 								<li>Semantic Markup 퍼블리싱</li>
 								<li>고해상력(High PPI) 디스플레이 대응</li>
 								<li>Android/IOS 앱 오픈</li>
-								<li>1.0에서 2.0으로 개편하면서 UI/UX 향상</li>
+								<li>1.0에서 2.0/3.0으로 개편하면서 UI/UX 향상</li>
 								<li>신규 서비스 추가 런칭</li>
 								<li>송금 서비스 전면 개편</li>
 							</ul>
@@ -72,10 +72,11 @@
 
 					<div class="m_port_area_app">
 						<ul class="m_app_list">
-							<li><img src="../../img/project/mobile/img_m_finnq_app1.jpg" alt="Finnq app 스크린샷1" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app2.jpg" alt="Finnq app 스크린샷2" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app3.jpg" alt="Finnq app 스크린샷3" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app4.jpg" alt="Finnq app 스크린샷4" /></li>
+							<li><img src="../../img/project/mobile/img_m_finnq_app1.webp" alt="Finnq app 스크린샷1" /></li>
+							<li><img src="../../img/project/mobile/img_m_finnq_app2.webp" alt="Finnq app 스크린샷2" /></li>
+							<li><img src="../../img/project/mobile/img_m_finnq_app3.webp" alt="Finnq app 스크린샷3" /></li>
+							<li><img src="../../img/project/mobile/img_m_finnq_app4.webp" alt="Finnq app 스크린샷4" /></li>
+							<li><img src="../../img/project/mobile/img_m_finnq_app5.webp" alt="Finnq app 스크린샷4" /></li>
 						</ul>
 					</div>
 				</div>
