--- a/detail/web/w_namdong_k.html
+++ b/detail/web/w_namdong_k.html
@@ -40,7 +40,6 @@
                                 <li>Semantic Markup 퍼블리싱</li>
                             </ul>
                         </li>
-                        <li><a href="http://www.kosep.co.kr/kosep/fr/main.do" target="_blank" class="ico_link"><em>사이트 바로가기</em> : http://www.kosep.co.kr/kosep/fr/main.do</a></li>
                     </ul>
                 </div>
 
@@ -53,9 +52,9 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/namdong_kr1.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
-                        <li><img src="../../img/project/web/namdong_kr2.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
-                        <li><img src="../../img/project/web/namdong_kr3.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr1.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr2.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_kr3.jpg" alt="남동발전 국문 사이트 메인 페이지 스크린샷" /></li>
                     </ul>
                 </div>
 
