이미지 URL 변경 및 수정

--- a/detail/web/w_lotte.html
+++ b/detail/web/w_lotte.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <title>롯데멤버스 WEB 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -55,13 +55,13 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/img_w_lotte1.jpg" alt="롯데멤버스 메인 페이지 스크린샷" /></li>
-                        <li><img src="../../img/project/web/img_w_lotte2.jpg" alt="롯데멤버스 페이지 스크린샷1" /></li>
-                        <li><img src="../../img/project/web/img_w_lotte3.jpg" alt="롯데멤버스 페이지 스크린샷3" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_lotte1.jpg" alt="롯데멤버스 메인 페이지 스크린샷" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_lotte2.jpg" alt="롯데멤버스 페이지 스크린샷1" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_lotte3.jpg" alt="롯데멤버스 페이지 스크린샷3" /></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
             </article>
         </div><!-- //container -->
     </section>
