--- a/detail/web/w_dovol.html
+++ b/detail/web/w_dovol.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <title>청소년 자원봉사 활동정보 봉사시스템 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
                         <li><em>Tool</em> : 전자정부 프레임</li>
                         <li><em>기간</em> : 2013.03.01 ~ 2013.03.28</li>
                         <li><em>담당업무</em> : 봉사활동 조회 및 입력/수정 정보 시스템 구축</li>
-                        <li><em>고객사</em> : 청소년 활동 진흥원</li>                        
+                        <li><em>고객사</em> : 청소년 활동 진흥원</li>
                     </ul>
                 </div>
 
@@ -47,13 +47,13 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/img_dovol1.jpg" alt="청소년 자원봉사 메인 페이지 스크린샷1" /></li>
-                        <li><img src="../../img/project/web/img_dovol2.jpg" alt="청소년 자원봉사 페이지 스크린샷2" /></li>
-                        <li><img src="../../img/project/web/img_dovol3.jpg" alt="청소년 자원봉사 페이지 스크린샷3" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol1.jpg" alt="청소년 자원봉사 메인 페이지 스크린샷1" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol2.jpg" alt="청소년 자원봉사 페이지 스크린샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_dovol3.jpg" alt="청소년 자원봉사 페이지 스크린샷3" /></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 
             </article>
         </div><!-- //container -->
