--- a/detail/web/w_finnq_v2.html
+++ b/detail/web/w_finnq_v2.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <title>핀크(finnq) 웹 사이트 운영 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -60,12 +60,12 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/img_finnq_w_1.jpg" alt="Finnq 웹 페이지 스크린샷1" /></li>
-                        <li><div class="mobile"><img src="../../img/project/web/img_finnq_w_2.jpg" alt="Finnq 웹 페이지 스크린샷2" /></div></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_finnq_w_1.jpg" alt="Finnq 웹 페이지 스크린샷1" /></li>
+                        <li><div class="mobile"><img src="https://heodokyung.github.io/portfolio/img/project/web/img_finnq_w_2.jpg" alt="Finnq 웹 페이지 스크린샷2" /></div></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 
             </article>
         </div><!-- //container -->
