--- a/detail/web/w_kebhana_company2.html
+++ b/detail/web/w_kebhana_company2.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <script type="text/javascript">
 $(function(){
     var txt = '기간 : 2017.08.07 – '+ $.todayDate() +'';
@@ -61,15 +61,15 @@ $(function(){
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/img_kebhana_combine_1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
-                        <li><img src="../../img/project/web/img_kebhana_company2_1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
-                        <li><img src="../../img/project/web/img_kebhana_company2_2.jpg" alt="KEB 하나은행 웹 페이지 스크린샷3" /></li>
-                        <li><img src="../../img/project/web/img_kebhana_company2_3.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
-                        <li><img src="../../img/project/web/img_kebhana_company2_4.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_combine_1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company2_1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company2_2.jpg" alt="KEB 하나은행 웹 페이지 스크린샷3" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company2_3.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_kebhana_company2_4.jpg" alt="KEB 하나은행 웹 페이지 스크린샷2" /></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 
             </article>
         </div><!-- //container -->
