--- a/detail/web/w_mirae.html
+++ b/detail/web/w_mirae.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <title>미래에셋대우 채널통합 TFT 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -66,14 +66,14 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/img_mirae0.jpg" alt="미래에셋대우 홈페이지 스크린샷0" /></li>
-                        <li><img src="../../img/project/web/img_mirae1.jpg" alt="미래에셋대우 홈페이지 스크린샷1" /></li>
-                        <li><img src="../../img/project/web/img_mirae2.jpg" alt="미래에셋대우 홈페이지 스크린샷2" /></li>
-                        <li><img src="../../img/project/web/img_mirae3.jpg" alt="미래에셋대우 홈페이지 스크린샷3" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_mirae0.jpg" alt="미래에셋대우 홈페이지 스크린샷0" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_mirae1.jpg" alt="미래에셋대우 홈페이지 스크린샷1" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_mirae2.jpg" alt="미래에셋대우 홈페이지 스크린샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_mirae3.jpg" alt="미래에셋대우 홈페이지 스크린샷3" /></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 
             </article>
         </div><!-- //container -->
