--- a/detail/web/w_namdong_e.html
+++ b/detail/web/w_namdong_e.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <title>한국남동발전 (ENG) 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -52,13 +52,13 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/namdong_en1.jpg" alt="남동발전 영문 사이트 메인 페이지 스크린샷" /></li>
-                        <li><img src="../../img/project/web/namdong_en2.jpg" alt="남동발전 영문 페이지 스크린샷2" /></li>
-                        <li><img src="../../img/project/web/namdong_en3.jpg" alt="남동발전 영문 페이지 스크린샷3" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_en1.jpg" alt="남동발전 영문 사이트 메인 페이지 스크린샷" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_en2.jpg" alt="남동발전 영문 페이지 스크린샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/namdong_en3.jpg" alt="남동발전 영문 페이지 스크린샷3" /></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 
             </article>
         </div><!-- //container -->
