--- a/detail/web/w_ramada.html
+++ b/detail/web/w_ramada.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
 <title>외교통상부 통합문서 관리 시스템 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
                         </li>
                         <li><em>작업환경</em> : PHP, jQuery, Javasrcipt</li>
                         <li><em>기간</em> : 2010.04.12 ~ 2012.02.01</li>
-                        <li><em>담당업무</em> : Ramada Casino 사이트 운영 및 전산업무</li>                        
+                        <li><em>담당업무</em> : Ramada Casino 사이트 운영 및 전산업무</li>
                         <li><em>DBMS / Server</em> : MS-SQL / iis</li>
                         <li><em>고객사</em> : Ramada Casino</li>
                     </ul>
@@ -46,13 +46,13 @@
 
                 <div id="touchSlider">
                     <ul class="port_info">
-                        <li><img src="../../img/project/web/img_w_ramada1.jpg" alt="Ramada 웹 페이지 스크린 샷1" /></li>
-                        <li><img src="../../img/project/web/img_w_ramada2.jpg" alt="Ramada 웹 페이지 스크린 샷2" /></li>
-                        <li><img src="../../img/project/web/img_w_ramada3.jpg" alt="Ramada 웹 페이지 스크린 샷3" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada1.jpg" alt="Ramada 웹 페이지 스크린 샷1" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada2.jpg" alt="Ramada 웹 페이지 스크린 샷2" /></li>
+                        <li><img src="https://heodokyung.github.io/portfolio/img/project/web/img_w_ramada3.jpg" alt="Ramada 웹 페이지 스크린 샷3" /></li>
                     </ul>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 
             </article>
         </div><!-- //container -->
