이미지 URL 변경 및 수정

--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -16,7 +16,7 @@
 		<div id="content_wrap" class="width_fix">
 			<div class="tit_bar">
 				<p class="tit">Finnq</p>
-				<p>Finnq App 2.0 서비스 운영</p>
+				<p>Finnq App 2.0/3.0 개편 서비스 운영</p>
 			</div>
 
 			<article id="content">
