--- a/detail/mobile/m_angel.html
+++ b/detail/mobile/m_angel.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>엔제리너스 MOBILE (KOR) 상세 | Lime Whale | Portfolio</title>
 </head>
@@ -46,6 +46,7 @@
 								<li>Semantic Markup 퍼블리싱</li>
 								<li>고해상력(High PPI) 디스플레이 대응</li>
 							</ul>
+						</li>
 						<li><em>고객사</em> : 롯데리아 그룹</li>
 					</ul>
 				</div>
@@ -53,21 +54,21 @@
 				<div class="m_description">
 					<div class="info">
 						<div class="tit"><span>Angel-in-us</span> <br />사이트 바로가기 QR</div>
-						<div><img src="../../img/project/qr/img_angel.png" alt="모바일 엔제리너스 바로가기 - http://m.angelinus.com" /></div>
+						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_angel.png" alt="모바일 엔제리너스 바로가기 - http://m.angelinus.com" /></div>
 					</div>
 
 					<div class="m_port_area_app">
 						<ul class="m_app_list">
-							<li><img src="../../img/project/mobile/img_m_angelcoffee1.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_angelcoffee2.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_angelcoffee3.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_angelcoffee4.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_angelcoffee5.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_angelcoffee1.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_angelcoffee2.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_angelcoffee3.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_angelcoffee4.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_angelcoffee5.jpg" alt="엔제리너스 모바일 웹 페이지 스크린샷" /></li>
 						</ul>
 					</div>
 				</div>
 
-				<a href="../../index.html" class="btn_port_list">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 			</article>
 		</div><!-- //container -->
 	</section>
