--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>KEB 하나은행 기업뱅킹 오픈뱅킹 | Lime Whale | Portfolio</title>
 </head>
@@ -72,16 +72,16 @@
 
 					<div class="m_port_area_app">
 						<ul class="m_app_list">
-							<li><img src="../../img/project/mobile/img_m_finnq_app1.webp" alt="Finnq app 스크린샷1" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app2.webp" alt="Finnq app 스크린샷2" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app3.webp" alt="Finnq app 스크린샷3" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app4.webp" alt="Finnq app 스크린샷4" /></li>
-							<li><img src="../../img/project/mobile/img_m_finnq_app5.webp" alt="Finnq app 스크린샷4" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_finnq_app1.webp" alt="Finnq app 스크린샷1" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_finnq_app2.webp" alt="Finnq app 스크린샷2" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_finnq_app3.webp" alt="Finnq app 스크린샷3" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_finnq_app4.webp" alt="Finnq app 스크린샷4" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_finnq_app5.webp" alt="Finnq app 스크린샷4" /></li>
 						</ul>
 					</div>
 				</div>
 
-				<a href="../../index.html" class="btn_port_list">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 			</article>
 		</div><!-- //container -->
 	</section>
