--- a/detail/mobile/m_lotte.html
+++ b/detail/mobile/m_lotte.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>롯데멤버스 MOBILE 상세 | Lime Whale | Portfolio</title>
 </head>
@@ -46,12 +46,12 @@
 				<div class="m_description">
 					<div class="info">
 						<div class="tit"><span>lottemembers</span> <br />사이트 바로가기 QR</div>
-						<div><img src="../../img/project/qr/img_lottem.png" alt="모바일 명동참치 바로가기 QR코드 - m.lottemembers.com" /></div>
+						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_lottem.png" alt="모바일 명동참치 바로가기 QR코드 - m.lottemembers.com" /></div>
 					</div>
 				</div>
 
 
-				 <a href="index.html" class="btn_port_list">목록보기</a>
+				 <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 			</article>
 		</div><!-- //container -->
 	</section>
