--- a/detail/mobile/m_tgif.html
+++ b/detail/mobile/m_tgif.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>TGIF MOBILE (KOR) 상세 | Lime Whale | Portfolio</title>
 </head>
@@ -47,20 +47,20 @@
 				<div class="m_description">
 					<div class="info">
 						<div class="tit"><span>TGI Fridays</span> <br />사이트 바로가기 QR</div>
-						<div><img src="../../img/project/qr/img_tgif.png" alt="모바일 TGIF 바로가기 - http://m.tgif.co.kr" /></div>
+						<div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_tgif.png" alt="모바일 TGIF 바로가기 - http://m.tgif.co.kr" /></div>
 					</div>
 					<div class="m_port_area_app">
 						<ul class="m_app_list">
-							<li><img src="../../img/project/mobile/img_m_tgi1.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_tgi2.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_tgi3.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_tgi4.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
-							<li><img src="../../img/project/mobile/img_m_tgi5.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_tgi1.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_tgi2.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_tgi3.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_tgi4.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_tgi5.jpg" alt="TGIF 모바일 웹 페이지 스크린샷" /></li>
 						</ul>
 					</div>
 				</div>
 
-				<a href="index.html" class="btn_port_list">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 			</article>
 		</div><!-- //container -->
 	</section>
