--- a/detail/mobile/m_hana_app.html
+++ b/detail/mobile/m_hana_app.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>KEB 하나은행 기업뱅킹 오픈뱅킹 | Lime Whale | Portfolio</title>
 </head>
@@ -47,6 +47,7 @@
 								<li>Android/IOS 앱 오픈</li>
 								<li>하나은행 기업뱅킹 전면개편으로 UI/UX 향상</li>
 							</ul>
+						</li>
 						<li><em>고객사</em> : KEB 하나은행</li>
 					</ul>
 				</div>
@@ -62,16 +63,16 @@
 
 					<div class="m_port_area_app">
 						<ul class="m_app_list">
-							<li><img src="../../img/project/mobile/img_m_hana_app1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
-							<li><img src="../../img/project/mobile/img_m_hana_app2.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
-							<li><img src="../../img/project/mobile/img_m_hana_app3.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
-							<li><img src="../../img/project/mobile/img_m_hana_app4.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
-							<li><img src="../../img/project/mobile/img_m_hana_app5.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_hana_app1.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_hana_app2.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_hana_app3.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_hana_app4.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
+							<li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_hana_app5.jpg" alt="KEB 하나은행 웹 페이지 스크린샷1" /></li>
 						</ul>
 					</div>
 				</div>
 
-				<a href="../../index.html" class="btn_port_list">목록보기</a>
+				<a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
 			</article>
 		</div><!-- //container -->
 	</section>
