--- a/detail/mobile/m_kloudbeer.html
+++ b/detail/mobile/m_kloudbeer.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>클라우드맥주 MOBILE 상세 | Lime Whale | Portfolio</title>
 </head>
@@ -29,43 +29,44 @@
                                 <span title="참여 영역 중 기여도">100%</span>
                             </span>
                         </li>
-                        <li></em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
-                        <li></em>기간</em> : 2014.05.12 ~ 2014.05.30</li>
-                        <li></em>담당업무</em> :
+                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+                        <li><em>기간</em> : 2014.05.12 ~ 2014.05.30</li>
+                        <li><em>담당업무</em> :
                             <ul>
                                 <li>클라우드 맥주 메인 &amp; 서브메인 GUI 퍼블리싱 </li>
                                 <li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
                                 <li>공통 마크업 가이드 제작 및 배포</li>
                                 <li>공통 UI 모션 개발</li>
                             </ul>
-                        <li></em>성과 :</em>
+                        </li>
+                        <li><em>성과 :</em>
                             <ul>
                                 <li><a href="http://www.i-award.or.kr/Web/Assess/FinalCandidateView.aspx?REG_SEQNO=4406" target="_blank" class="ico_link">웹 어워드 코리아 (WEB AWARD KOREA) 브랜드 이노베이션대상</a></li>
                                 <li>Semantic Markup 퍼블리싱</li>
                                 <li>고해상력(High PPI) 디스플레이 대응</li>
                             </ul>
                         </li>
-                        <li></em>고객사</em> : 롯데주류</li>
+                        <li><em>고객사</em> : 롯데주류</li>
                     </ul>
                 </div>
 
                 <div class="m_description">
                     <div class="info">
                         <div class="tit"><span>Kloud Beer</span> <br />사이트 바로가기 QR</div>
-                        <div><img src="../../img/project/qr/img_kloud.png" alt="모바일 클라우드 바로가기 QR코드 - m.kloudbeer.com" /></div>
+                        <div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_kloud.png" alt="모바일 클라우드 바로가기 QR코드 - m.kloudbeer.com" /></div>
                     </div>
                     <div class="m_port_area_app">
                         <ul class="m_app_list">
-                            <li><img src="../../img/project/mobile/img_m_kloud1.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_kloud2.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_kloud3.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_kloud4.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_kloud5.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud1.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud2.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud3.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud4.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_kloud5.jpg" alt="클라우드 모바일 웹 페이지 스크린샷" /></li>
                         </ul>
                     </div>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
             </article>
         </div><!-- //container -->
     </section>
