--- a/detail/mobile/m_krispy.html
+++ b/detail/mobile/m_krispy.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
-<link rel="shortcut icon" href="../../img/favicon.ico" />
+<link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
 <script type="text/javascript" src="../../js/jQuery.import.js"></script>
 <title>크리스피 크림 도넛 MOBILE (KOR) 상세 | Lime Whale | Portfolio</title>
 </head>
@@ -51,20 +51,20 @@
                 <div class="m_description">
                     <div class="info">
                         <div class="tit"><span>krispykreme</span> <br />사이트 바로가기 QR</div>
-                        <div><img src="../../img/project/qr/img_krisp.png" alt="모바일 크리스피 크림 도넛 바로가기 - m.krispykreme.co.kr" /></div>
+                        <div><img src="https://heodokyung.github.io/portfolio/img/project/qr/img_krisp.png" alt="모바일 크리스피 크림 도넛 바로가기 - m.krispykreme.co.kr" /></div>
                     </div>
                     <div class="m_port_area_app">
                         <ul class="m_app_list">
-                            <li><img src="../../img/project/mobile/img_m_krispy1.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_krispy2.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_krispy3.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_krispy4.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
-                            <li><img src="../../img/project/mobile/img_m_krispy5.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy1.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy2.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy3.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy4.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
+                            <li><img src="https://heodokyung.github.io/portfolio/img/project/mobile/img_m_krispy5.jpg" alt="크리스피 크림 도넛 모바일 웹 페이지 스크린샷" /></li>
                         </ul>
                     </div>
                 </div>
 
-                <a href="../../index.html" class="btn_port_list">목록보기</a>
+                <a href="https://heodokyung.github.io/portfolio/index.html" class="btn_port_list">목록보기</a>
             </article>
         </div><!-- //container -->
     </section>
