App 스토어 URL 변경

--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -74,8 +74,8 @@
 					<div>
 						<p class="info_app_tit">[돈 버는 소비습관 핀크]</p>
 						<div class="btn_app_wrap">
-							<a class="btn_google" href="" target="_blank"><span>Google Play</span></a>
-							<a class="btn_apple" href="" target="_blank"><span>App Store</span></a>
+							<a class="btn_google" href="https://play.google.com/store/apps/details?id=com.finnq.f1&hl=ko&gl=US" target="_blank"><span>Google Play</span></a>
+							<a class="btn_apple" href="https://apps.apple.com/kr/app/finnq/id1260871482" target="_blank"><span>App Store</span></a>
 						</div>
 					</div>
 
