--- a/detail/mobile/m_hana_app.html
+++ b/detail/mobile/m_hana_app.html
@@ -56,8 +56,8 @@
 					<div>
 						<p class="info_app_tit">[KEB Hanabank 기업뱅킹]</p>
 						<div class="btn_app_wrap">
-							<a class="btn_google" href="https://play.google.com/store/apps/details?id=com.hanabank.ebk.channel.android.cpb&hl=ko" target="_blank"><span>Google Play</span></a></li>
-							<a class="btn_apple" href="https://itunes.apple.com/kr/app/1q-bank-%EA%B8%B0%EC%97%85-keb%ED%95%98%EB%82%98%EC%9D%80%ED%96%89-%EA%B8%B0%EC%97%85%EC%8A%A4%EB%A7%88%ED%8A%B8-%EB%B1%85%ED%82%B9/id395878804?mt=8" target="_blank"><span>App Store</span></a>
+							<a class="btn_google" href="https://play.google.com/store/apps/details?id=com.hanabank.ebk.channel.android.cpb&hl=ko" target="_blank"><span>Google Play</span></a>
+							<a class="btn_apple" href="https://apps.apple.com/md/app/id395878804" target="_blank"><span>App Store</span></a>
 						</div>
 					</div>
 
