App 스토어 URL 변경

--- a/detail/mobile/m_adcap.html
+++ b/detail/mobile/m_adcap.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>애드캡슐소프트 MOBILE 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 		<div id="content_wrap" class="width_fix">
 			<div class="tit_bar">
 				<p class="tit">Adcapsule</p>
-				<p>애드캡슐소프트 MOBILE</P>
+				<p>애드캡슐소프트 MOBILE</p>
 			</div>
 
 			<article id="content">
@@ -29,7 +29,7 @@
 								<span title="참여 영역 중 기여도">100%</span>
 							</span>
 						</li>
-						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
 						<li><em>기간</em> : 2015.01.05 ~ 2015.02.06</li>
 						<li><em>담당업무</em> :
 							<ul>
@@ -41,7 +41,7 @@
 						</li>
 						<li><em>성과</em> :
 							<ul>
-								<li>Semantic Markup 구현, </li>
+								<li>Semantic Markup 구현</li>
 								<li>고해상력(High PPI) 디스플레이 대응</li>
 							</ul>
 						</li>
