--- a/detail/mobile/m_hana_app.html
+++ b/detail/mobile/m_hana_app.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>KEB 하나은행 기업뱅킹 오픈뱅킹 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,11 +29,12 @@
 								<span title="참여 영역 중 기여도">100%</span>
 							</span>
 						</li>
-						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a>, <a href="https://www.redmine.org/" target="_blank">RedMine</a>, <a href="http://www.i-on.net/product/ics/index.html" target="_blank">ICS6(I-ON Content Server)</a></li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a>, <a href="https://www.redmine.org/" target="_blank">RedMine</a>, <a href="http://www.i-on.net/product/ics/index.html" target="_blank">ICS6(I-ON Content Server)</a></li>
 						<li><em>기간</em> : 2018.01.08 - 2018.06.29<span></span></li>
 						<li><em>담당업무</em> :
 							<ul>
 								<li>퍼블리셔PL</li>
+								<li>메인 : Native</li>
 								<li>서브메인 퍼블리싱 및 GUI 구현</li>
 								<li>서브 컨텐츠 페이지 퍼블리싱 및 GUI 구현</li>
 								<li>KEB 하나은행 기업뱅킹 공통 마크업 가이드 배포</li>
@@ -56,8 +57,8 @@
 					<div>
 						<p class="info_app_tit">[KEB Hanabank 기업뱅킹]</p>
 						<div class="btn_app_wrap">
-							<a class="btn_google" href="https://play.google.com/store/apps/details?id=com.hanabank.ebk.channel.android.cpb&hl=ko" target="_blank"><span>Google Play</span></a></li>
-							<a class="btn_apple" href="https://itunes.apple.com/kr/app/1q-bank-%EA%B8%B0%EC%97%85-keb%ED%95%98%EB%82%98%EC%9D%80%ED%96%89-%EA%B8%B0%EC%97%85%EC%8A%A4%EB%A7%88%ED%8A%B8-%EB%B1%85%ED%82%B9/id395878804?mt=8" target="_blank"><span>App Store</span></a>
+							<a class="btn_google" href="https://play.google.com/store/apps/details?id=com.hanabank.ebk.channel.android.cpb&hl=ko" target="_blank"><span>Google Play</span></a>
+							<a class="btn_apple" href="https://apps.apple.com/md/app/id395878804" target="_blank"><span>App Store</span></a>
 						</div>
 					</div>
 
