--- a/detail/web/w_mofat.html
+++ b/detail/web/w_mofat.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>외교통상부 통합문서 관리 시스템 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <span title="참여 영역 중 기여도">30%</span>
                             </span>
                         </li>
-                        <li><em>작업환경</em> : Java, Jsp, SQL, jQuery, Javacript</li>
+                        <li><em>작업환경</em> : Java, Jsp, SQL, Jquery, Javacript</li>
                         <li><em>기간</em> : 2012.10.01 – 2013.02.28</li>
                         <li><em>담당업무</em> : 외교통상부 내부 보안 서류 시스템 개발, 해외 공관 서비스 오픈</li>
                         <li><em>DBMS</em> : CUBRID</li>
