--- a/detail/mobile/m_finnq_app_v2.html
+++ b/detail/mobile/m_finnq_app_v2.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>KEB 하나은행 기업뱅킹 오픈뱅킹 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,13 +29,14 @@
 								<span title="참여 영역 중 기여도">100%</span>
 							</span>
 						</li>
-						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://sass-lang.com/" target="_blank">Sass</a>, <a href="https://zeplin.io/" target="_blank">Zeplin</a>, <a href="https://github.com/" target="_blank">Git/SVN</a>, <a href="https://ko.atlassian.com/software/jira" target="_blank">Jira</a>, <a href="https://ko.atlassian.com/software/confluence" target="_blank">Wiki Confluence</a>, <a href="https://slack.com/" target="_blank">Slack</a></li>
+						<li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://sass-lang.com/" target="_blank">Sass</a>, <a href="https://zeplin.io/" target="_blank">Zeplin</a>, <a href="https://github.com/" target="_blank">Git/SVN</a>, <a href="https://ko.atlassian.com/software/jira" target="_blank">Jira</a>, <a href="https://ko.atlassian.com/software/confluence" target="_blank">Wiki Confluence</a>, <a href="https://slack.com/" target="_blank">Slack</a></li>
 						<li><em>기간</em> : 2018.08.01 - 재직중</li>
 						<li><em>담당업무</em> :
 							<ul>
 								<li>Finnq App 서비스 운영</li>
-								<li>신규 추가 서비스 퍼블리싱 및 GUI구현</li>
+								<li>신규 추가 서비스 퍼블리싱 및 이벤트 페이지 GUI구현</li>
 								<li>Ajax 데이터 연동 이벤트 구현</li>
+								<li>차트 구현</li>
 								<li><a href="https://terms.naver.com/entry.nhn?docId=2067169&cid=50305&categoryId=50305" target="_blank">트러블 슈팅(trouble shooting)</a> 및 단위테스트</li>
 								<li><a href="https://www.jenkins.io/" target="_blank">Jenkins</a> 및 <a href="http://www.softrepublic.co.kr/m05/m05_013.html" target="_blank">ChangeFlow</a>, Git을 통한 형상 배포</li>
 							</ul>
@@ -64,6 +65,7 @@
 								<li>오픈뱅킹API 도입으로 은행/증권사 연결 다양화</li>
 								<li>신규 서비스 추가 런칭</li>
 								<li>송금 서비스 전면 개편</li>
+								<li>금융 서비스 전면 개편</li>
 								<li>SNS기반 금융서비스 리얼리런칭</li>
 							</ul>
 						</li>
@@ -74,8 +76,8 @@
 					<div>
 						<p class="info_app_tit">[돈 버는 소비습관 핀크]</p>
 						<div class="btn_app_wrap">
-							<a class="btn_google" href="" target="_blank"><span>Google Play</span></a>
-							<a class="btn_apple" href="" target="_blank"><span>App Store</span></a>
+							<a class="btn_google" href="https://play.google.com/store/apps/details?id=com.finnq.f1&hl=ko&gl=US" target="_blank"><span>Google Play</span></a>
+							<a class="btn_apple" href="https://apps.apple.com/kr/app/finnq/id1260871482" target="_blank"><span>App Store</span></a>
 						</div>
 					</div>
 
