--- a/detail/mobile/m_lotte.html
+++ b/detail/mobile/m_lotte.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="../../js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>롯데멤버스 MOBILE 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
 								<span title="참여 영역 중 기여도">30%</span>
 							</span>
 						</li>
-						<li><em>작업환경</em> : JAVA, JSP, jQuery, javascript</li>
+						<li><em>작업환경</em> : JAVA, JSP, Jquery, javascript</li>
 						<li><em>기간</em> : 2013.04.24 ~ 2013.07.31</li>
 						<li><em>담당업무</em> :
 							<ul>
