--- a/detail/web/w_dovol.html
+++ b/detail/web/w_dovol.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>청소년 자원봉사 활동정보 봉사시스템 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <span title="참여 영역 중 기여도">20%</span>
                             </span>
                         </li>
-                        <li><em>작업환경</em> : JAVA, JSP, SQL, jQuery, javascript</li>
+                        <li><em>작업환경</em> : JAVA, JSP, SQL, Jquery, javascript</li>
                         <li><em>DBMS</em> : ORACLE</li>
                         <li><em>Tool</em> : 전자정부 프레임</li>
                         <li><em>기간</em> : 2013.03.01 ~ 2013.03.28</li>
