--- a/detail/web/w_finnq_v2.html
+++ b/detail/web/w_finnq_v2.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>핀크(finnq) 웹 사이트 운영 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <span title="참여 영역 중 기여도">100%</span>
                             </span>
                         </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://zeplin.io/" target="_blank">Zeplin</a>, <a href="https://github.com/" target="_blank">Git/SVN</a>, <a href="https://ko.atlassian.com/software/jira" target="_blank">Jira</a>, <a href="https://ko.atlassian.com/software/confluence" target="_blank">Wiki Confluence</a>, <a href="https://slack.com/" target="_blank">Slack</a></li>
+                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://zeplin.io/" target="_blank">Zeplin</a>, <a href="https://github.com/" target="_blank">Git/SVN</a>, <a href="https://ko.atlassian.com/software/jira" target="_blank">Jira</a>, <a href="https://ko.atlassian.com/software/confluence" target="_blank">Wiki Confluence</a>, <a href="https://slack.com/" target="_blank">Slack</a></li>
                         <li><em>기간</em> : 2017.11.10 - 재직중</li>
                         <li><em>담당업무</em> :
                             <ul>
