--- a/detail/web/w_lotte_leader.html
+++ b/detail/web/w_lotte_leader.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>롯데 리더그룹 리더역량 평가 시스템 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <span title="참여 영역 중 기여도">100%</span>
                             </span>
                         </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">XHTML 1.0 Transitional</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">XHTML 1.0 Transitional</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
                         <li><em>기간</em> : 2014.06.02 ~ 2014.06.27</li>
                         <li><em>담담업무</em> : 롯데 리더그룹 리더역량 평가 시스템 가이드</li>
                         <li><em>고객사</em> : 롯데정보통신</li>
