--- a/detail/web/w_namdong_k.html
+++ b/detail/web/w_namdong_k.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>한국남동발전 (KOR) 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <span title="참여 영역 중 기여도">30%</span>
                             </span>
                         </li>
-                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://jquery.com/" target="_blank">jQUERY</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
+                        <li><em>작업환경</em> : <a href="https://www.w3schools.com/html/default.asp" target="_blank">HTML5</a>, <a href="https://www.w3schools.com/css/default.asp" target="_blank">CSS3</a>, <a href="https://Jquery.com/" target="_blank">Jquery</a>, <a href="https://www.w3schools.com/js/default.asp" target="_blank">Javascript</a>, <a href="https://www.photoshop.com/products" target="_blank">Adobe Photoshop</a></li>
                         <li><em>담당업무</em> : 웹 접근성 검수, Smart BOD, 지속가능경영, 정보공개 메뉴 담당</li>
                         <li><em>기간</em> : 2014.03.03 ~ 2014.05.02</li>
                         <li><em>고객사</em> : 한국남동발전(주)</li>
