--- a/detail/web/w_ramada.html
+++ b/detail/web/w_ramada.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
 <link rel="shortcut icon" href="https://heodokyung.github.io/portfolio/img/favicon.ico" />
-<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/jQuery.import.js"></script>
+<script type="text/javascript" src="https://heodokyung.github.io/portfolio/js/Jquery.import.js"></script>
 <title>외교통상부 통합문서 관리 시스템 상세 | Lime Whale | Portfolio</title>
 </head>
 <body>
@@ -29,7 +29,7 @@
                                 <span title="참여 영역 중 기여도">100%</span>
                             </span>
                         </li>
-                        <li><em>작업환경</em> : PHP, jQuery, Javasrcipt</li>
+                        <li><em>작업환경</em> : PHP, Jquery, Javasrcipt</li>
                         <li><em>기간</em> : 2010.04.12 ~ 2012.02.01</li>
                         <li><em>담당업무</em> : Ramada Casino 사이트 운영 및 전산업무</li>
                         <li><em>DBMS / Server</em> : MS-SQL / iis</li>
