--- a/detail/web/w_mirae.html
+++ b/detail/web/w_mirae.html
@@ -46,6 +46,7 @@
                         <li><em>성과</em>:
                             <ul>
                                 <li>미래에셋증권과 미래에셋 대우 사이트 통합으로 보다 나은 서비스 및 편리한 UI/UX 제공</li>
+                                <li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
                                 <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank">미래에셋 대우 웹 접근성 마크 획득</a></li>
                                 <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank">회사소개 국문 웹 접근성 마크 획득</a></li>
                                 <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank">회사소개 영문 웹 접근성 마크 획득</a></li>
