--- a/detail/web/w_finnq_v2.html
+++ b/detail/web/w_finnq_v2.html
@@ -43,7 +43,7 @@
                         <li><em>성과</em> :
                             <ul>
                                 <li>Semantic Markup 퍼블리싱</li>
-                                <li>1.0에서 2.0으로 개편하면서 UI/UX 향상</li>
+                                <li>1.0에서 2.0/3.0으로 개편하면서 UI/UX 향상</li>
                                 <li>반응형 웹으로 구현하여 다양한 디바이스에서도 최적화 환경 제공</li>
                                 <li>다양한 프로모션 이벤트 페이지 구현으로 앱 유입자 증가</li>
                             </ul>
