--- a/detail/web/w_kebhana_company.html
+++ b/detail/web/w_kebhana_company.html
@@ -36,6 +36,7 @@
                         <li><em>성과 </em>:
                             <ul>
                                 <li>익스플로러(ie7~) 및 모던 브라우저 크로스브라우징</li>
+                                <li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
                                 <li>웹 접근성 준수</li>
                                 <li>I-ON SERVER로 컨텐츠/개발서버 분리</li>
                                 <li>UI 모션 개발</li>
