--- a/detail/web/w_samsung.html
+++ b/detail/web/w_samsung.html
@@ -45,6 +45,7 @@
                                 <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">회사소개(국문) 웹 접근성 마크 획득</a></li>
                                 <li><a href="http://wa.or.kr/waMark/status_new.asp" target="_blank" class="ico_link">회사소개(영문) 웹 접근성 마크 획득</a></li>
                                 <li>PC, 테블릿 반응형 웹 사이트로 테블릿 및 PC에 최적화 구현</li>
+                                <li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
                                 <li>익스플로러(ie8~) 및 모던 브라우저 크로스브라우징</li>
                                 <li>Semantic Markup 퍼블리싱</li>
                             </ul>
