--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 			<h2 class="title">skill</h2>
 			<lottie-player src="https://assets5.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"  style="width: 100%; height: 400px;"  loop  autoplay></lottie-player>
 
+
 			<ul class="skill__list">
 				<li>
 					<div class="front">
@@ -116,7 +117,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://www.w3schools.com/ -->
 					</div>
 					<div class="back">
 						<p>웹표준, 웹 접근성을 준수하고 웹, 모바일 웹, 하이브리드 웹 화면에 최적화 된 화면을 구현하며 HTML5, CSS3를 활용하여 보다 간결하고 시멘틱한 마크업을 사용합니다.</p>
@@ -128,7 +128,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://www.w3schools.com/js/ -->
 					</div>
 					<div class="back">
 						JavaScript를 사용하여 스크립트를 구현합니다.
@@ -141,7 +140,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://jquery.com/ -->
 					</div>
 					<div class="back">
 						jQuery를 활용하여 Json을 활용한 Ajax 데이터 핸들링 및 UI모션 기능을 구현합니다.
@@ -153,7 +151,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://kr.vuejs.org/v2/guide/index.html -->
 					</div>
 					<div class="back">Vue는 사용자 인터페이스를 만들기 위한 프레임워크 입니다. 현재 저의 포트폴리오 사이트도 Vue를 사용하여 구현하였습니다.</div>
 				</li>
@@ -164,7 +161,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://sass-lang.com/ -->
 					</div>
 					<div class="back">
 						Sass를 활용하여 CSS를 컴파일 합니다. 보다 간결하고 재사용, 확장성이 가능한 CSS 코드를 사용하여 신규 코드의 사용 및 유지보수에 용이하도록 작업합니다.
@@ -176,7 +172,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!--  -->
 					</div>
 					<div class="back">
 						디자이너와 업무의 효율적인 협업을 위해 제플린을 통해 디자인을 전달받고 작업하였습니다. 코멘트를 활용하여 수정사항을 전달하고 피드백을 전달하였습니다.
@@ -188,7 +183,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://ko.atlassian.com/software/jira -->
 					</div>
 					<div class="back">
 						Jira를 활용하여 타팀의 신규서비스 및 수정사항을 등록하고 히스토리를 관리하며 Jira와 ChangeFlow를 통해 QA에게 업무를 전달하여 소스코드를 배포 및 수정을 진행합니다.
@@ -200,7 +194,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://ko.atlassian.com/software/confluence -->
 					</div>
 					<div class="back">
 						Wiki Confluence를 통하여 웹/앱 작업에 대한 이슈사항을 히스토리를 남겨서 모두가 확인하고 반복된 실수를 하지 않도록 공유하고 개발자들과 Wiki Confluence를 통해 협업을 진행하였습니다.
@@ -213,7 +206,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://www.redmine.org/ -->
 					</div>
 					<div class="back">
 						RedMine을 통하여 프로젝트의 전체 IA를 확인하고 업무 일정 및 업무량을 배정받아 일정에 맞게 작업을 진행하였습니다.
@@ -225,7 +217,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://github.com/ -->
 					</div>
 					<div class="back">
 						Git/SVN을 통하여 파일 버전관리를 하였습니다. 여러명의 작업자들이 함께 작업을 진행해야 하기 때문에 히스토리 관리 및 버전관리를 통해 작업을 효율적으로 진행하였습니다.
@@ -237,7 +228,6 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://www.sublimetext.com/ -->
 					</div>
 					<div class="back">
 						Sublime Text를 활용하여 마크업 및 JavaScript를 구현합니다. Sublime Text의 기능을 활용하여 보다 정확한 코드를 작성하고 업무의 효율을 증진시킵니다.
@@ -249,10 +239,9 @@
 						<div class="over">
 							<span class="tit">CLICK</span>
 						</div>
-						<!-- https://slack.com/ -->
 					</div>
 					<div class="back">
-						Slack을 활용하여 기획, 디자인, 개발팀과의 업무를 전달하고 이슈사항을 공유합니다. 타 팀과 프로젝트별로 채널을 만들어 프로젝트별로 업무의 상황을 서로 공유하여 업무의 효율을 높입니다.
+						Slack을 활용하여 기획, 디자인, 개발팀과의 업무를 전달하고 이슈사항을 공유합니다. 타 팀과 프로젝트별로 채널을 만들어 업무의 상황과 이슈를 공유하여 효율을 높입니다.
 					</div>
 				</li>
 			</ul>
@@ -426,16 +415,18 @@
 </body>
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="js/lottie-player.js"></script>
+<!-- <script type="text/javascript" src="js/isotope.pkgd.min.js?date20210101"></script> -->
 <script type="text/javascript" src="js/vue-2.5.17.min.js"></script>
-<script type="text/javascript" src="js/ui.js?date190522_1113"></script>
-<script type="text/javascript" src="js/mainVue.js?date190522_1113"></script>
+<script type="text/javascript" src="js/ui.js?date20210101"></script>
+<script type="text/javascript" src="js/mainVue.js?date20210101"></script>
 <script type="text/javascript">
 $(function(){
 
 	// Common UI
 	let windowH 	= $(window).height(),
 		documentH 	= $(document).height(),
-		easing	 	= 'swing';
+		easing	 	= 'swing',
+		targetPos	= undefined;
 
 	// 스크롤 시 메뉴 페이드
 	$(window).scroll(function(event){
@@ -448,11 +439,16 @@ $(function(){
 		$(document).on('mouseenter focusin', '.port__list li', function() {
 			$(this).find('.over').css({ opacity : .8 }).stop().fadeIn(250);
 			$(this).find('.more').stop().animate({ bottom : '50px'}, 350, easing, function() {});
-		});
-
+		}),
 		$(document).on('mouseleave focusout', '.port__list li', function() {
 			$('.port__list li .over').fadeOut(250);
 			$(this).find('.more').stop().animate({ bottom : '-300%'}, 350, easing, function() {});
+		}),
+		$(document).on('click', '.port__list li a', function(event) {
+			event.preventDefault();
+			targetPos = $(this).offset().top;
+			const link =  $(this).attr('href');
+			location.href = link + '?'+ targetPos +'';
 		});
 	}
 
@@ -507,12 +503,10 @@ $(function(){
 			let status = $(this).hasClass('on');
 			if (status) { $(this).removeClass('on'); }
 			else { $(this).addClass('on').siblings().removeClass('on'); }
-		});
-
+		}),
 		$(document).on('mouseenter focusin', '.skill__list li', function() {
 			$(this).find('.over').stop().fadeIn(250);
-		});
-
+		}),
 		$(document).on('mouseleave focusout', '.skill__list li', function() {
 			$('.skill__list li .over').fadeOut(250);
 		});
