--- a/detail/web/w_kebhana_combine.html
+++ b/detail/web/w_kebhana_combine.html
@@ -43,7 +43,8 @@
                         </li>
                         <li><em>성과</em> :
                             <ul>
-                                <li>CBS 기업뱅킹과 CBS Light 기업뱅킹 통합을 통해 더욱 간결해진 UI/UX 제공,</li>
+                                <li>CBS 기업뱅킹과 CBS Light 기업뱅킹 통합을 통해 더욱 간결해진 UI/UX 제공</li>
+                                <li>W3C Markup Validator, 웹 접근성 자동 평가도구(K-wah) 통과</li>
                                 <li>익스플로러(ie7~) 및 모던 브라우저 크로스브라우징</li>
                                 <li>Semantic Markup 퍼블리싱</li>
                             </ul>
